# Renderer

./: CMakeLists.txt  LICENSE  Markdown.md  README.md  defocus_test.cpp  dielectric_test.cpp  diffuse_material_test.cpp  hello_world.cpp  lambertian_test.cpp  metal_test.cpp  multiple_object_rendering_test.cpp  rtweekend.cpp  simple_rendering_test.cpp  single_sphere_rendering_test.cpp
src/: BackgroundBase.h  Camera.cpp  Camera.h  Dielectric.cpp  Dielectric.h  HittableBase.h  HittableList.cpp  HittableList.h  Lambertian.cpp  Lambertian.h  MaterialBase.h  Metal.cpp  Metal.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  SimpleSkyBackground.cpp  SimpleSkyBackground.h  Sphere.cpp  Sphere.h  utils.cpp  utils.h
